infra/k8s/base/auth-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api-service
  namespace: mobile-backend
spec:
  selector:
    app: auth-api
  ports:
    - port: 3000
      targetPort: 3000
